tests/outref/TC010.ref

-- TC010 : OCTO381 : Allow DATE and TIME types to be specified in the Octo DDL but treated as strings internally

-- Test that DATE and TIME types work (TIME specified without any precision)
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME) READONLY;
SELECT date1 from DATETIME;
SELECT time1 from DATETIME;
SELECT id::DATE from DATETIME;
SELECT id::TIME from DATETIME;
SELECT date1::integer from DATETIME;
SELECT date1::numeric from DATETIME;
SELECT date1::varchar from DATETIME;
SELECT date1::text from DATETIME;
SELECT date1::date from DATETIME;
SELECT date1::time from DATETIME;
DROP TABLE DATETIME;

-- Test that TIME(precision) (TIME type specified with precision) also works
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(10)) READONLY;
SELECT time1 from DATETIME;
SELECT time1::integer from DATETIME;
SELECT time1::numeric from DATETIME;
SELECT time1::varchar from DATETIME;
SELECT time1::text from DATETIME;
SELECT time1::date from DATETIME;
SELECT time1::time from DATETIME;
DROP TABLE DATETIME;

-- Test that various precision values work with TIME
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(10)) READONLY;
DROP TABLE DATETIME;
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(4)) READONLY;
DROP TABLE DATETIME;
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(8)) READONLY;
DROP TABLE DATETIME;
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(16)) READONLY;
DROP TABLE DATETIME;
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(32)) READONLY;
DROP TABLE DATETIME;
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(64)) READONLY;
DROP TABLE DATETIME;
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(127)) READONLY;
DROP TABLE DATETIME;
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(0)) READONLY;
DROP TABLE DATETIME;
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(-1)) READONLY;
-- DROP TABLE DATETIME;
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(-1.5)) READONLY;
-- DROP TABLE DATETIME;
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(15.8)) READONLY;
-- DROP TABLE DATETIME;
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME('abcd')) READONLY;
-- DROP TABLE DATETIME;
CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(abcd)) READONLY;
-- DROP TABLE DATETIME;

OCTO> CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME) READONLY;
CREATE TABLE
OCTO> SELECT date1 from DATETIME;
date1
2020-01-04
1998-11-13
2005-09-22
1975-05-31
(4 rows)
OCTO> SELECT time1 from DATETIME;
time1
14:01:10
14:12:59
13:23:09
15:15:22
(4 rows)
OCTO> SELECT id::DATE from DATETIME;
id
1
2
3
4
(4 rows)
OCTO> SELECT id::TIME from DATETIME;
id
1
2
3
4
(4 rows)
OCTO> SELECT date1::integer from DATETIME;
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: '2020-01-04'
OCTO> SELECT date1::numeric from DATETIME;
[ERROR]: ERR_INVALID_NUMERIC_SYNTAX: Invalid input syntax for type numeric: '2020-01-04'
OCTO> SELECT date1::varchar from DATETIME;
date1
2020-01-04
1998-11-13
2005-09-22
1975-05-31
(4 rows)
OCTO> SELECT date1::text from DATETIME;
date1
2020-01-04
1998-11-13
2005-09-22
1975-05-31
(4 rows)
OCTO> SELECT date1::date from DATETIME;
date1
2020-01-04
1998-11-13
2005-09-22
1975-05-31
(4 rows)
OCTO> SELECT date1::time from DATETIME;
date1
2020-01-04
1998-11-13
2005-09-22
1975-05-31
(4 rows)
OCTO> DROP TABLE DATETIME;
DROP TABLE
OCTO> CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(10)) READONLY;
CREATE TABLE
OCTO> SELECT time1 from DATETIME;
time1
14:01:10
14:12:59
13:23:09
15:15:22
(4 rows)
OCTO> SELECT time1::integer from DATETIME;
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: '14:01:10'
OCTO> SELECT time1::numeric from DATETIME;
[ERROR]: ERR_INVALID_NUMERIC_SYNTAX: Invalid input syntax for type numeric: '14:01:10'
OCTO> SELECT time1::varchar from DATETIME;
time1
14:01:10
14:12:59
13:23:09
15:15:22
(4 rows)
OCTO> SELECT time1::text from DATETIME;
time1
14:01:10
14:12:59
13:23:09
15:15:22
(4 rows)
OCTO> SELECT time1::date from DATETIME;
time1
14:01:10
14:12:59
13:23:09
15:15:22
(4 rows)
OCTO> SELECT time1::time from DATETIME;
time1
14:01:10
14:12:59
13:23:09
15:15:22
(4 rows)
OCTO> DROP TABLE DATETIME;
DROP TABLE
OCTO> CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(10)) READONLY;
CREATE TABLE
OCTO> DROP TABLE DATETIME;
DROP TABLE
OCTO> CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(4)) READONLY;
CREATE TABLE
OCTO> DROP TABLE DATETIME;
DROP TABLE
OCTO> CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(8)) READONLY;
CREATE TABLE
OCTO> DROP TABLE DATETIME;
DROP TABLE
OCTO> CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(16)) READONLY;
CREATE TABLE
OCTO> DROP TABLE DATETIME;
DROP TABLE
OCTO> CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(32)) READONLY;
CREATE TABLE
OCTO> DROP TABLE DATETIME;
DROP TABLE
OCTO> CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(64)) READONLY;
CREATE TABLE
OCTO> DROP TABLE DATETIME;
DROP TABLE
OCTO> CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(127)) READONLY;
CREATE TABLE
OCTO> DROP TABLE DATETIME;
DROP TABLE
OCTO> CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(0)) READONLY;
CREATE TABLE
OCTO> DROP TABLE DATETIME;
DROP TABLE
LINE 42:1: ... (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(-1)) READONLY;
                                                               ^
syntax error, unexpected MINUS, expecting LITERAL
OCTO> CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(-1)) READONLY;
LINE 43:1: ...id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(-1.5)) READONLY;
                                                             ^
syntax error, unexpected MINUS, expecting LITERAL
OCTO> CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(-1.5)) READONLY;
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: '15.8'
LINE 44:1: ...(id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(15.8)) READONLY;
                                                              ^^^^
OCTO> CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(15.8)) READONLY;
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: 'abcd'
LINE 45:1: ...d INTEGER PRIMARY KEY, date1 DATE, time1 TIME('abcd')) READONLY;
                                                            ^^^^^^
OCTO> CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME('abcd')) READONLY;
LINE 46:1: ...(id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(abcd)) READONLY;
                                                              ^^^^
syntax error, unexpected IDENTIFIER_ALONE, expecting LITERAL
OCTO> CREATE TABLE DATETIME (id INTEGER PRIMARY KEY, date1 DATE, time1 TIME(abcd)) READONLY;
OCTO> 
